style.css
.notifications {
    min-height: 7vmin;
    font-size: 5vmin;
}

.board {
    border-spacing: 0.8vmin;
    display: inline-block;
    padding-top: 0px;
    height: 60vh;
}

.board td {
    border-style: solid;
    border-width: 1px;
    border-color: black;
    height: 8vmin;
    width: 8vmin;
    text-align: center;
    font-size: 6vmin;
}
.board .gray {
    background-color: lightslategray;
}

.board .yellow {
    background-color: lightyellow;
}

.board .green {
    background-color: palegreen;
}

.game {
    text-align: center;
    width: 100%;
}

.game-area {
    display: inline-block;
    text-align: center;
    overflow-y: auto;
    padding-right: -calc(100vw - 100%);
}

.keyboard {
    height:  30vh;
}

.keyboard button {
    display:  inline-flex;
    padding: 4vh 2.5vw 4vh 2.5vw;
    width: 3vw;
    height: 5vh;
    margin: 0.3vmin;
    justify-content: center;
    align-items: center;
    font-size: 4vmin;
}

